login and logout with hash password complete

--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mi App Desktop</title>
-        <link rel="stylesheet" href="css/main.css" />
-        <link rel="stylesheet" href="css/native.css" />
-        <link rel="stylesheet" href="css/login.css" />
-        <link rel="stylesheet" href="css/home.css" />
+        <link id="login" disabled rel="stylesheet" href="css/login.css" />
+        <link id="home" disabled rel="stylesheet" href="css/home.css" />
     </head>
     <body>
         <div id="app">
             <main id="content">
-                <!-- Aquí se renderizará el login -->
+                <!-- Renderizado -->
             </main>
         </div>
 
